# esp32p4-ui-studio

./: .gitignore  01_SPINE.md  01_SPINEAI.md  02_DEVELOPER_CODE_MAP.md  02_SPINE Archive.md  02_SPINE-SEO.md  02__SPINEAIInteractive Assets Ad New Component.md  02__SPINEAIInteractive Assets.md  02__SPINEFull Code Map and Integration.md  03_ForgeUI_Generated_Export_API_Code_Map.md  CHECK_FORGEUI_INSTALL.bat  FIRST_TIME_FORGEUI_SETUP.bat  GETTING_STARTED FORGEUI_STUDIO.md  README.md  START_FORGEUI_STUDIO_HIDDEN.vbs  hgit push
firmware/ForgeUI-One/main/: 01_FG_Runtime.c  40_SIDEBAR.c  40_SIDEBAR.h  90_Studio_Export.c  90_Studio_Export.h  95_UserEvents.c  95_UserEvents.h  CMakeLists.txt  main.c
firmware/ForgeUI-One/main/assets/uploads/: fg_upload_ai_button_normal_1784423439503_1784423458965_26443786.c  fg_upload_ai_button_normal_1784425693819_1784425716390_e4c67340.c  fg_upload_ai_button_normal_1784436952876_1784436978208_969fc1d1.c  fg_upload_ai_button_normal_1784437044648_1784437064545_335aefc2.c  fg_upload_ai_button_normal_1784437123487_1784437146262_e382a5cd.c  fg_upload_ai_button_normal_1784437236763_1784437261617_7426077b.c  fg_upload_ai_button_normal_1784439468551_1784439487718_3df058ce.c  fg_upload_ai_button_normal_1784439532374_1784439551627_25c295cc.c  fg_upload_ai_button_normal_1784439597302_1784439618788_c48587b3.c  fg_upload_ai_button_normal_1784439655817_1784439674734_0b40ebb9.c  fg_upload_ai_button_normal_1784456048422_1784456071708_e635bbab.c  fg_upload_ai_button_normal_1784618978195_1784618998837_9a9d4c98.c  fg_upload_ai_button_normal_1784621913609_1784621944929_0ac2660e.c  fg_upload_ai_button_normal_1784622830684_1784622858129_0f0a2bd1.c  fg_upload_ai_button_normal_1784665943770_1784665976971_80c831f1.c  fg_upload_ai_button_normal_1784669037072_1784669063985_aaaca64a.c  fg_upload_ai_button_normal_1784669116028_1784669138607_db792bed.c  fg_upload_ai_button_normal_1784677240652_1784677263363_f19e1afc.c  fg_upload_ai_button_normal_1784677321403_1784677340179_f471c4db.c  fg_upload_ai_button_normal_1784678892980_1784678916596_c921e640.c  fg_upload_ai_button_pressed_1784423439503_1784423481741_94475ec3.c  fg_upload_ai_button_pressed_1784425693819_1784425738405_e1e3a1e8.c  fg_upload_ai_button_pressed_1784436952876_1784437002520_3d529088.c  fg_upload_ai_button_pressed_1784437044648_1784437087950_7c8c8790.c  fg_upload_ai_button_pressed_1784437123487_1784437165774_a32b9bce.c  fg_upload_ai_button_pressed_1784437236763_1784437281180_2b51c174.c  fg_upload_ai_button_pressed_1784439468551_1784439510435_2b233f89.c  fg_upload_ai_button_pressed_1784439532374_1784439571494_67480b60.c  fg_upload_ai_button_pressed_1784439597302_1784439638794_2e38c2e8.c  fg_upload_ai_button_pressed_1784439655817_1784439696420_92b6d476.c  fg_upload_ai_button_pressed_1784456048422_1784456096221_a6cce689.c  fg_upload_ai_button_pressed_1784618978195_1784619035670_b407a0a0.c  fg_upload_ai_button_pressed_1784621913609_1784621969578_7567a27a.c  (+182 more)
studio/: 01_SPINE.md  02_SPINE-SEO.md  README.md  (+8 more)
(+134 files in other folders)
